# PA1_project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/gameoflife/: CMakeLists.txt  gameoflife.cpp  gameoflife.h  main.cpp
src/seamcarving/: CMakeLists.txt  cvmatrenderer.cpp  cvmatrenderer.h  main.cpp  seamcarving.cpp  seamcarving.h
src/seamcarving/cmake/: MacroOpenCV.cmake
src/seamcarving/cmake/modules_opencv/: FindOpenCV.cmake
